--- a/app/options.html
+++ b/app/options.html
@@ -1,24 +1,83 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <!-- build:css styles/vendor.css -->
-        <!-- bower:css -->
-        <!-- endbower -->
-        <!-- endbuild -->
-        <!-- build:css styles/main.css -->
-        <link href="styles/main.css" rel="stylesheet">
-        <!-- endbuild -->
-    </head>
-    <body>
-        <h1>'Allo, 'Allo!</h1>
-                
-        <!-- build:js scripts/vendor.js -->
-        <!-- bower:js -->
-        <!-- endbower -->
-        <!-- endbuild -->
+<head>
+    <!-- Replace this with your extension's title. -->
+    <title>Options - TechnicolorTimesheet</title>
+    <link rel="stylesheet" type="text/css" href="styles/options/options.css"/>
+    <link rel="stylesheet" type="text/css" href="styles/options.css"/>
 
-        <!-- build:js scripts/options.js -->
-        <script src="scripts/options.js"></script>
-        <!-- endbuild -->
-    </body>
+    <script type="text/javascript" src="scripts/options.js"></script>
+</head>
+<body>
+<nav class="sideBar">
+    <h1>Chrome</h1>
+    <ul>
+        <li><a href="chrome://history" target="_blank">History</a></li>
+        <li>
+            <a href="chrome://extensions">Extensions</a>
+        </li>
+        <li class="selected"><a href="">Technicolor</a></li>
+        <li><a href="chrome://settings">Settings</a></li>
+        <li><a href="chrome://help">Help</a></li>
+    </ul>
+</nav>
+<header>
+    <h1>Technicolor Timesheet</h1>
+</header>
+<section>
+    <h3>Color Settings</h3>
+</section>
+<ol>
+    <li class="ruleset">
+        <div class="rule-result">
+            Set the background color to <input type="color" value="#eeeeee"/>
+            when
+            <select name="type">
+                <option>any</option>
+                <option>all</option>
+            </select>
+            of the selected rules match:
+        </div>
+
+        <ul class="criteria">
+            <li class="rule">
+                <label class="rule-enabled">
+                    <input type="checkbox" name="client"/>
+                    Client is
+                </label>
+                <input type="text" class="value"/> <label class="regex"><input type="checkbox"/> regex?</label>
+            </li>
+            <li class="rule">
+                <label class="rule-enabled">
+                    <input type="checkbox" name="workorder"/>
+                    Workorder is
+                </label>
+                <input type="text" class="value"/> <label class="regex"><input type="checkbox"/> regex?</label>
+            </li>
+            <li class="rule disabled">
+                <label class="rule-enabled">
+                    <input type="checkbox" name="description"/>
+                    Description is
+                </label>
+                <input type="text" class="value"/> <label class="regex"><input type="checkbox"/> regex?</label>
+            </li>
+            <li class="rule">
+                <label class="rule-enabled">
+                    <input type="checkbox" name="descriptionPrefix"/>
+                    Description Prefix is
+                </label>
+                <input type="text" class="value"/> <label class="regex"><input type="checkbox"/> regex?</label>
+            </li>
+            <li class="rule disabled">
+                <label class="rule-enabled">
+                    <input type="checkbox"/>
+                    Timesheet entry is flagged
+                </label>
+            </li>
+        </ul>
+
+        <button>Add a style</button>
+    </li>
+</ol>
+</body>
 </html>
