--- a/app/options.html
+++ b/app/options.html
@@ -29,7 +29,9 @@
     <section >
       <h3>{{* "settings_label" | i18n }}</h3>
       <div v-component="rule-list" rules="{{rules}}"></div>
-      <button v-on="click: addRule">{{ "add_rule_label" | i18n }}</button>
+      <button v-on="click: addRule">{{* "add_rule_label" | i18n }}</button>
+      
+      <button v-on="click: saveRules">{{* "save_rules_label" | i18n}}</button>
     </section>
   </div>
 </body>
